--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ main {
   align-items: center;
   height: 49px;
   gap: 35px;
+  margin-top: 32px;
 }
 
 main {
@@ -46,7 +47,6 @@ main {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  margin-bottom: 32px;
 }
 
 .login_card {
